--- a/parsers/s01-parse/timokoessler/gitlab-logs.yaml
+++ b/parsers/s01-parse/timokoessler/gitlab-logs.yaml
@@ -6,13 +6,13 @@ nodes:
   - filter: |
      JsonExtract(evt.Parsed.message, "method") == 'POST' &&
      JsonExtract(evt.Parsed.message, "path") in ['/users/sign_in', '/users/auth/ldapmain/callback'] &&
-     any(JsonExtractSlice(evt.Parsed.message, "params"), {.key == 'user' && .value.login != ''}) &&
+     any(JsonExtractSlice(evt.Parsed.message, "params"), {.key startsWith 'user' && .value != ''}) &&
      (JsonExtract(evt.Parsed.message, 'status') == '0' || JsonExtract(evt.Parsed.message, 'action') == 'failure')
     statics:
       - meta: log_type
         value: "gitlab_failed_password"
       - meta: username
-        expression: filter(JsonExtractSlice(evt.Parsed.message, "params"), {.key == 'user' && .value.login != ''})[0]['value']['login']
+        expression: filter(JsonExtractSlice(evt.Parsed.message, "params"), {.key startsWith 'user' && .value != ''})[0]['value']
   - filter: |
      JsonExtract(evt.Parsed.message, "method") == 'POST' &&
      JsonExtract(evt.Parsed.message, "path") == '/users/sign_in' &&
